# credit-risk-mlops-e2e

./: LICENSE  Makefile  README.md  pyproject.toml
data/interim/: cr_loan_clean.csv
notebooks/: TrainCreditRiskModel.ipynb
